src/components/Landing/Landing.module.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Lato", sans-serif;
}


.landingContainer{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    height: 90vh;
}

.heading{
    font-size: 3rem;
}

h1 .oranges{
    font-size: larger;
    font-weight: 600;
    -webkit-text-stroke: 2px black
}

.welcomeMessage{
    font-size: 1.2rem;
}

.videoContainer{
    width: 65%;
    height: 100%;
}

.video{
    width: 100%;
    height: 100%;
    border-radius: 0 0 10px 0;
    object-fit: cover;
}

.signUpForm{
    width: 30%;
    height: 80%;
    margin-right: 1rem;
    /* background: rgba(255, 255, 255, 0.8); */
    /* border: black solid 3px; */
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    text-align: center;
    gap: 50px;
    padding: 2rem;

}

